--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "helmet": "^3.11.0",
+    "lodash": "^4.17.5",
     "morgan": "^1.9.0",
     "winston": "^2.4.0"
   }
