--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "NODE_ENV=test mocha ./test/specs/*"
+    "test": "NODE_ENV=test mocha ./test/specs/*",
+    "test:watch": "NODE_ENV=test mocha  --watch ./test/specs/*"
   },
   "repository": {
     "type": "git",
@@ -26,5 +27,10 @@
     "lodash": "^4.17.5",
     "morgan": "^1.9.0",
     "winston": "^2.4.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.0.0",
+    "sinon": "^4.3.0"
   }
 }
