--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "helmet": "^3.11.0",
     "lodash": "^4.17.5",
     "morgan": "^1.9.0",
+    "socket.io": "^2.0.4",
     "winston": "^2.4.0"
   },
   "devDependencies": {
