--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "helmet": "^3.11.0",
+    "joi": "^13.1.2",
     "lodash": "^4.17.5",
     "morgan": "^1.9.0",
     "socket.io": "^2.0.4",
