--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "test": "NODE_ENV=test mocha ./test/specs/*",
-    "test:watch": "NODE_ENV=test mocha  --watch ./test/specs/*"
+    "test:watch": "NODE_ENV=test mocha  --watch ./test/specs/*",
+    "lint": "eslint --fix server/ test/specs/"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,10 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "eslint": "^4.17.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
     "mocha": "^5.0.0",
     "sinon": "^4.3.0"
   }
